# Mina

./: .gitignore  CMakeLists.txt  compile_commands.json  flake.nix
include/: CMakeLists.txt  CandlestickChart.hpp  ClearScreen.hpp  Crosshair.hpp  CurlInit.hpp  CurlWriter.hpp  DisplayResult.hpp  DisplaySynopsis.hpp  Ebita.hpp  GetNumberStdin.hpp  GetVersionNum.hpp  VersionNumberInfo.hpp  YAxis.hpp  action.hpp  calc.hpp  unit_tests.hpp
src/: AboutButton.qml  AboutMenu.qml  AppearanceButton.qml  AppearanceMenu.qml  BrowseButton.qml  BrowsePage.qml  CMakeLists.txt  ClearScreen.cpp  ColorWheel.qml  DisplayResult.cpp  DisplaySynopsis.cpp  DropdownMenu.qml  GetNumberStdin.cpp  GetVersionNum.cpp  GetVersionNum.cpp.in  HelpButton.qml  HelpMenu.qml  HomeButton.qml  Main.qml  action.cpp  action.h  calc.cpp  calc.h  compile_commands.json  get_version_num.cpp  get_version_num.cpp.in  get_version_num.h  home.qml  main.cpp  unit_tests.cpp
src/CPP/: CandlestickChart.cpp  Crosshair.cpp  CurlInit.cpp  CurlWriter.cpp  Ebita.cpp  GetVersionNum.cpp  VersionNumberInfo.cpp  YAxis.cpp  main.cpp
src/QML/: AboutButton.qml  AboutMenu.qml  AppearanceButton.qml  AppearanceMenu.qml  BarChart.qml  BrowseButton.qml  BrowsePage.qml  Cogwheel.qml  ColorScheme.qml  ConstSingleton.qml  DropdownButtonColumn.qml  DropdownMenu.qml  HelpButton.qml  HelpMenu.qml  HomeButton.qml  HomePage.qml  Main.qml  ManualButton.qml  ManualPage.qml  StockList.qml
test/: CMakeLists.txt  ClearScreenValidInp.cpp  DisplayResultValidInp.cpp  DisplaySynopsisValidInp.cpp  EbitaInvalidInp.cpp  EbitaValidInp.cpp
